# RL_Attack_September24

./: .gitignore  .gitmodules  agents-comparison.ipynb  agents-tuning.py  baseline_attacks.py  changed-files.txt  classifier-tuning.py  classifier_search.py  clf-search-results.ipynb  launch.sh  main-files.txt  main.py  minitest.py  nn_exception.py  parameter_search.py  parameters.py  plots.ipynb  plots.py  ppo_search.py  pyproject.toml  runner.py  safeExperiment.py  test.py  test_TimeGAN.ipynb  vignette.py
Baselines/: attack_generation.py  baselines_classes.py  preprocess_data.py
Classes/: baselines_classes.py  column_preprocess.py  datset_inteface.py  fraud_env.py  main_class.py
Classifiers/: train_classifiers.py
Defenses/: robustClassifiers.py
Stuff/: plots.ipynb
VestaDataset/: VestaClassification.ipynb
Visualization/: average_results.py  plot_results.py
agents/: __init__.py  agent.py  vae.py
banksys/: __init__.py  banksys.py  card.py  card_info.py  cardsim.py  classification.py  has_ordered_transactions.py  minitest.py  terminal.py  transaction.py  transaction_registry.py
cardsim/: README.md  __init__.py  cardsim.py  preliminary_data_analysis.ipynb
classes/: baselines_classes.py  datset_inteface.py  main_class.py
classifiers/: check_classifiers_perfomance.py  train_classifiers.py
environment/: __init__.py  action.py  card_info.py  card_registry.py  card_sim_env.py  exceptions.py  observation.py  pooled_card_sim_env.py  priority_queue.py  simple_card_sim_env.py  step_data.py  terminal.py  transaction.py
fine-tuning-results/: 0-summary.txt  (+240 more)
(+111 files in other folders)
